--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -22,3 +22,10 @@ $sp: 480px;  // スマホ
 		@content;
 	}
 }
+
+@mixin center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
