--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -7,16 +7,101 @@ body {
 }
 
 @keyframes anime {
-  0% {transform: translate(-50%,-50%) scale(1)}
-  1% {transform: translate(-50%,-50%) scale(1.0000000002726013)}
-  2% {transform: translate(-50%,-50%) scale(1.0000000157847322)}
-  3% {transform: translate(-50%,-50%) scale(1.0000001506545724)}
-  4% {transform: translate(-50%,-50%) scale(1.0000006436646534)}
-  5% {transform: translate(-50%,-50%) scale(1.0000016169928077)}
-  6% {transform: translate(-50%,-50%) scale(1.0000023928810586)}
-  7% {transform: translate(-50%,-50%) scale(1.0000006621013304)}
-  8% {transform: translate(-50%,-50%) scale(0.9999922522615491)}
-  9% {transform: translate(-50%,-50%) scale(0.9999724101016645)}
+  0% {transform: translate(-50%,-50%) scale(1.1)}
+  10% {transform: translate(-50%,-50%) scale(0.999939097467271)}
+  11% {transform: translate(-50%,-50%) scale(0.9998977654686504)}
+  12% {transform: translate(-50%,-50%) scale(0.9998657202610037)}
+  13% {transform: translate(-50%,-50%) scale(0.9998731348810653)}
+  14% {transform: translate(-50%,-50%) scale(0.9999577058665318)}
+  15% {transform: translate(-50%,-50%) scale(1.0001514091026675)}
+  16% {transform: translate(-50%,-50%) scale(1.000460775586396)}
+  17% {transform: translate(-50%,-50%) scale(1.000845898676034)}
+  18% {transform: translate(-50%,-50%) scale(1.0012066891043123)}
+  19% {transform: translate(-50%,-50%) scale(1.001386110438845)}
+  20% {transform: translate(-50%,-50%) scale(1.0011979104110422)}
+  21% {transform: translate(-50%,-50%) scale(1.0004802335016343)}
+  22% {transform: translate(-50%,-50%) scale(0.9991673041388444)}
+  23% {transform: translate(-50%,-50%) scale(0.9973613837562757)}
+  24% {transform: translate(-50%,-50%) scale(0.9953797523632679)}
+  25% {transform: translate(-50%,-50%) scale(0.9937500612090581)}
+  26% {transform: translate(-50%,-50%) scale(0.9931345970667446)}
+  27% {transform: translate(-50%,-50%) scale(0.9941802316606225)}
+  28% {transform: translate(-50%,-50%) scale(0.9973136870171991)}
+  29% {transform: translate(-50%,-50%) scale(1.0025259459036975)}
+  30% {transform: translate(-50%,-50%) scale(1.0092079273007268)}
+  31% {transform: translate(-50%,-50%) scale(1.0161044659712586)}
+  32% {transform: translate(-50%,-50%) scale(1.021439755517406)}
+  33% {transform: translate(-50%,-50%) scale(1.0232335261855936)}
+  34% {transform: translate(-50%,-50%) scale(1.0197777737958473)}
+  35% {transform: translate(-50%,-50%) scale(1.01018902044365)}
+  36% {transform: translate(-50%,-50%) scale(0.9949052295949258)}
+  37% {transform: translate(-50%,-50%) scale(0.9759750081146479)}
+  38% {transform: translate(-50%,-50%) scale(0.957001883931883)}
+  39% {transform: translate(-50%,-50%) scale(0.9426632367638442)}
+  40% {transform: translate(-50%,-50%) scale(0.9378165269844378)}
+  41% {transform: translate(-50%,-50%) scale(0.9463182860736681)}
+  42% {transform: translate(-50%,-50%) scale(0.9697882547052336)}
+  43% {transform: translate(-50%,-50%) scale(1.0066222793436779)}
+  44% {transform: translate(-50%,-50%) scale(1.0515662440644147)}
+  45% {transform: translate(-50%,-50%) scale(1.096093241052114)}
+  46% {transform: translate(-50%,-50%) scale(1.1296783191668462)}
+  47% {transform: translate(-50%,-50%) scale(1.141860781542881)}
+  48% {transform: translate(-50%,-50%) scale(1.1247632853839393)}
+  49% {transform: translate(-50%,-50%) scale(1.0755523292826)}
+  50% {transform: translate(-50%,-50%) scale(0.9982297381419192)}
+  51% {transform: translate(-50%,-50%) scale(0.9215521460009289)}
+  52% {transform: translate(-50%,-50%) scale(0.8733973571461465)}
+  53% {transform: translate(-50%,-50%) scale(0.857494358222759)}
+  54% {transform: translate(-50%,-50%) scale(0.8707605569638206)}
+  55% {transform: translate(-50%,-50%) scale(0.9051371051888977)}
+  56% {transform: translate(-50%,-50%) scale(0.9500720440144114)}
+  57% {transform: translate(-50%,-50%) scale(0.9950401203912773)}
+  58% {transform: translate(-50%,-50%) scale(1.0315876820540169)}
+  59% {transform: translate(-50%,-50%) scale(1.054578733845235)}
+  60% {transform: translate(-50%,-50%) scale(1.0625400279526733)}
+  61% {transform: translate(-50%,-50%) scale(1.0572066716098718)}
+  62% {transform: translate(-50%,-50%) scale(1.0425154905727347)}
+  63% {transform: translate(-50%,-50%) scale(1.0233606831965605)}
+  64% {transform: translate(-50%,-50%) scale(1.0044148994381161)}
+  65% {transform: translate(-50%,-50%) scale(0.9892455381212246)}
+  66% {transform: translate(-50%,-50%) scale(0.9798479756383492)}
+  67% {transform: translate(-50%,-50%) scale(0.9766044919953499)}
+  68% {transform: translate(-50%,-50%) scale(0.9785853238530055)}
+  69% {transform: translate(-50%,-50%) scale(0.9840527503300631)}
+  70% {transform: translate(-50%,-50%) scale(0.99101537562878)}
+  71% {transform: translate(-50%,-50%) scale(0.9977024828986042)}
+  72% {transform: translate(-50%,-50%) scale(1.0028749846828227)}
+  73% {transform: translate(-50%,-50%) scale(1.0059446065324609)}
+  74% {transform: translate(-50%,-50%) scale(1.0069221999860838)}
+  75% {transform: translate(-50%,-50%) scale(1.0062494491256704)}
+  76% {transform: translate(-50%,-50%) scale(1.0045814611009305)}
+  77% {transform: translate(-50%,-50%) scale(1.002582207592806)}
+  78% {transform: translate(-50%,-50%) scale(1.000776069996758)}
+  79% {transform: translate(-50%,-50%) scale(0.9994743596651393)}
+  80% {transform: translate(-50%,-50%) scale(0.9987728722960092)}
+  81% {transform: translate(-50%,-50%) scale(0.9986005098466092)}
+  82% {transform: translate(-50%,-50%) scale(0.9987920877212657)}
+  83% {transform: translate(-50%,-50%) scale(0.9991601104423884)}
+  84% {transform: translate(-50%,-50%) scale(0.9995479333717407)}
+  85% {transform: translate(-50%,-50%) scale(0.9998567896016709)}
+  86% {transform: translate(-50%,-50%) scale(1.000048334467194)}
+  87% {transform: translate(-50%,-50%) scale(1.0001304020534978)}
+  88% {transform: translate(-50%,-50%) scale(1.0001357742876962)}
+  89% {transform: translate(-50%,-50%) scale(1.0001024507176992)}
+  90% {transform: translate(-50%,-50%) scale(1.0000605448052882)}
+  91% {transform: translate(-50%,-50%) scale(1.0000271284045912)}
+  92% {transform: translate(-50%,-50%) scale(1.0000074015515763)}
+  93% {transform: translate(-50%,-50%) scale(0.9999991479530732)}
+  94% {transform: translate(-50%,-50%) scale(0.9999975302496411)}
+  95% {transform: translate(-50%,-50%) scale(0.9999983624253558)}
+  96% {transform: translate(-50%,-50%) scale(0.9999993542542989)}
+  97% {transform: translate(-50%,-50%) scale(0.9999998500522618)}
+  98% {transform: translate(-50%,-50%) scale(0.999999984448731)}
+  99% {transform: translate(-50%,-50%) scale(0.9999999997376916)}
+  100% {transform: translate(-50%,-50%) scale(1.0)}
+}
+@keyframes anime_stay {
+  0% {transform: translate(-50%,-50%) scale(0.95)}
   10% {transform: translate(-50%,-50%) scale(0.999939097467271)}
   11% {transform: translate(-50%,-50%) scale(0.9998977654686504)}
   12% {transform: translate(-50%,-50%) scale(0.9998657202610037)}
