変更：vhを使わず%を使用

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,9 +1,13 @@
 body {
   margin: 0;
-  overflow: hidden;
   background: #becdbb;
   user-select: none;
   display: block;
+}
+
+#__layout, #__layout>div, #__nuxt, body, html {
+  overflow: hidden;
+  height: 100%;
 }
 
 @keyframes anime {
